--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html  lang="ru">
   <head>
     <link rel="Website icon" type="png"
-    href="music.jpg">
+    href="1.png">
     <meta name="utf-8">
     <meta name="author" content="Albert Mkoyan">
     <meta name="description" content="Тестовая страница">
@@ -11,22 +11,31 @@
   <title>Music</title>
 </head>
 <body>
-        <div class="bigimage">
-          <div class="overlay">
-            <h1><div>
-              <h2>Phonk<h2>
-            </div></h1>
-
-          </div>
-        </div>
   <style>
-      img {
-        outline: 5px solid lime;
+      body{
 
+        background-image: url('https://wallpaperaccess.com/full/2377084.png');
+      }
+      img {
+        display: inline-block;
+        outline: 5px solid black;
       }
 
-    </style>
 
+
+
+    </style>
+      <center><h1><div>
+        <h2>Phonk<h2>
+      </div></h1></center>
+      <img src="phonk1.jpg" width="18%" left>
+      <center><b class="class">Brazilian danca phonk</b>
+      <p><audio
+        style="border:10px solid grey;
+              border-radius: 50px;"
+        src="Brazilian.mp3" controls>
+      </audio></p>
+      </center>
 
 
 
